<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/merah">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/judul_register"
        android:layout_marginVertical="10dp">
        <ImageButton
            android:id="@+id/back_login"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_judul"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_reg"
        android:elevation="5dp"
        android:layout_below="@id/judul_register"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo_sb_login"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_sb"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_marginHorizontal="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username_login"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/pwd_register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwd_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/confirm_pwd_register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_pwd_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_masuk_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_masuk"
            android:backgroundTint="@color/merah"
            android:text="@string/btn_masuk"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>
</RelativeLayout>